--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ temp/
 assignment/my_submission/menu
 assignment/my_submission/processes
 assignment/my_submission/threads
+assignment/my_submission/SJF_scheduling
 assignment/simple_version/threads
