--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ assignment/my_submission/menu
 assignment/my_submission/processes
 assignment/my_submission/threads
 assignment/my_submission/SJF_scheduling
+assignment/my_submission/SJF.zip
 assignment/simple_version/threads
