add banker-algo assigment

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ assignment/my_submission/processes
 assignment/my_submission/threads
 assignment/my_submission/SJF_scheduling
 assignment/my_submission/SJF.zip
+assignment/my_submission/banker-algo
 assignment/simple_version/threads
