add virtual memory assignment

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ assignment/my_submission/SJF_scheduling
 assignment/my_submission/SJF.zip
 assignment/my_submission/banker-algo
 assignment/my_submission/TBL-algo
+assignment/my_submission/virtual-memory
 assignment/simple_version/
