--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "pacam"]
-	path = pacam
-	url = https://github.com/acsii-63/pacam.git
+[submodule "fast-rle"]
+	path = fast-rle
+	url = https://github.com/acsii-63/fast-rle.git
