--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 .vscode/
 temp/
+
+untracked/
+
 assignment/my_submission/menu
 assignment/my_submission/processes
 assignment/my_submission/threads
